# tabby-example

./: .gitmodules  CMakeLists.txt  readme.md
assets/: imgui.ini  tbconfig
assets/scenes/: test_map.blend  test_map.blend1  test_map.gltf  test_map.mtl
assets/shaders/gl33/: Renderer2D_Text.glsl  Renderer3D_MeshUnlit.glsl
assets/shaders/gl46/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl  Renderer3D_MeshUnlit.frag  Renderer3D_MeshUnlit.glsl  Renderer3D_MeshUnlit.vert
assets/shaders/gles3/: Renderer2D_Text.frag  Renderer2D_Text.vert  Renderer2D_Text_Frag.glsl
assets/shaders/vulkan/: Mesh.tbsf  Sprite.tbsf  test.glsl  test2.glsl
client/: CMakeLists.txt
client/assets/shaders/gles3/: Renderer2D_Text.glsl
client/src/: Base.cpp  Components.h  MapLoader.h  Resources.h
client/src/Entities/Player/: Player.h
client/src/Panels/SceneHierarchyPanel/: Properties.cpp  SceneHierarchyPanel.cpp
src/: Base.cpp  Base.h  Components.cpp  Components.h  Entities.h  MapLoader.cpp  MapLoader.h  SandboxApp.cpp
src/CustomComponent/: Components.cpp  Components.h
src/Entities/Player/: Player.h  PlayerData.h  PlayerState.cpp  PlayerState.h  PlayerStateMachine.cpp  PlayerStateMachine.h
src/Networking/: Client.cpp  Client.h  Packets.h  Server.cpp  Server.h
src/Panels/ContentBrowserPanel/: ContentBrowserPanel.cpp
src/Panels/SceneHierarchyPanel/: Properties.cpp
